# eco-smem

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
src/: CMakeLists.txt  smem.cpp
src/include/public/eco/extstl/: fixed_string.hpp  readme.md
src/include/public/eco/smem/: smem.hpp
src/include/public/eco/utils/: errno_e.hpp
test/: CMakeLists.txt  main.cpp
test/compile_tests/: constexpr_testing.hpp  fixed_string.cpp  smem_c_interface.cpp
vcpkg-overlays/ports/llvm/: portfile.cmake
